# repository/laravel/routes/api/user.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\User\UserController;
 use App\Http\Controllers\User\LoginController;
+use App\Http\Controllers\ResetPasswordController;
 use App\Http\Controllers\ForgotPasswordController;
 
 Route::group(['prefix' => 'user', 'as' => 'user.'], function (): void {
@@ -15,6 +16,8 @@ Route::group(['prefix' => 'user', 'as' => 'user.'], function (): void {
     Route::get('/logout', [LoginController::class, 'destroy'])->name('logout');
 
     Route::post('/forgot-password', ForgotPasswordController::class)->name('forgot-pass');
+
+    Route::post('/reset-password-token', ResetPasswordController::class)->name('reset-pass-token');
 
     Route::group(['middleware' => ['auth.jwt', 'can:user-access']], function (): void {
         Route::get('/', [UserController::class, 'index'])->name('account');
